adjust border line css to prevent mobile overflow

--- a/portfolio/sass/base/_images.sass
+++ b/portfolio/sass/base/_images.sass
@@ -27,9 +27,5 @@
   box-shadow: 0 2px 16px 0 rgba(0,0,0,0.18)
 
 .hline 
-  width: 100%
   height: 1px 
   background: #e5ebf7
-  padding:
-  	left: 5%
-  	right: 5%
